--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-  background: url(background.png) no-repeat center center fixed; 
+  background: url(background.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -12,17 +12,21 @@ html {
 
 h1 {
   font-size: 3rem;
-  color: #e2dbdb;
+  color: #e6d4da; 
+}
+
+h4 {
+  color: #e6d4da; 
 }
 
 hr {
   border-color: #F05F44;
   border-width: 3px;
-  max-width: 65px;
+  max-width: 300px;
 }
 
 .buffer {
-  height: 10rem;
+  height: .5rem;
 }
 
 .btn {
