--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css);
+
 body,
 html {
   width: 100%;
@@ -18,11 +20,12 @@ h1 {
 hr {
   border-color: #F05F44;
   border-width: 3px;
-  max-width: 65px;
+  max-width: 300px;
+  border-radius: 50px
 }
 
 .buffer {
-  height: 10rem;
+  height: 3rem;
 }
 
 .btn {
@@ -42,6 +45,7 @@ hr {
 
 .btn-xl {
   padding: 1rem 2rem;
+  margin: 10px;
 }
 
 .trans{
@@ -50,4 +54,56 @@ hr {
 
 .trans:hover {
   transform: scale(1.1);
+}
+
+.bounce {
+  position: absolute;
+  bottom: 30px;
+  left: 50% ;
+  width: 60px;
+  height: 60px ;
+  margin-left:-30px;
+  -webkit-border-radius:50%;
+  -moz-border-radius:50%;
+  -ms-border-radius:50%;
+  border-radius:50%;
+  animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  -moz-animation: bounce 2s infinite;
+  -o-animation: bounce 2s infinite;
+  color: #ffffff;
+  float: both;
+}
+
+.me {
+	margin: 1px 20px;
+	float: left;
+	width: 10em;
+	height: 10em;
+	transition: width 2s, height 2.5s;
+}
+
+.me:hover {
+	width: 16em;
+	height: 16em;
+}
+
+.rotate{
+	transform: rotate(180deg);
+}
+
+b{
+	font-size: 2em;
+}
+
+span{
+	font-weight: bold;
+	color: white;
+	margin-right: 100px;
+	margin
+}
+
+a,a:hover{
+	color: #ffffff;
+	text-decoration: none;
 }
